--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13475],[],[[4,0,0,[],[1,416,2186],[[0,5,6,0,7,8,0,0,[1,417,2184],[[417,2,9]]]]],[10,0,0,[],[1,2604,10869],[[0,11,6,0,12,13,0,0,[1,2604,170],[[2605,2,14]]],[0,11,6,0,12,15,0,0,[1,2776,153],[[2777,2,16]]],[0,11,6,0,12,17,0,0,[1,2929,198],[[2929,2,18]]],[0,19,6,0,20,21,0,0,[1,3127,150],[[3128,2,22]]],[0,19,6,0,20,23,0,0,[1,3279,70],[[3279,2,24]]],[0,25,26,0,27,28,0,0,[1,3349,5001],[[8350,2,29]]],[0,19,6,0,20,30,0,0,[1,8351,89],[[8351,2,31]]],[0,32,6,0,33,34,0,0,[1,8440,29],[[8469,2,35]]],[0,25,26,0,27,28,0,0,[1,8470,5002],[[13471,2,29]]]]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15850],[],[[4,0,0,[],[1,545,15300],[[0,5,0,0,0,0,0,0,[1,546,3686],[[0,6,7,0,8,9,0,0,[1,548,3684],[[548,2,10]]]]],[0,11,0,0,0,0,0,0,[1,4234,1107],[[0,12,7,0,13,14,0,0,[1,4234,176],[[4235,2,15]]],[0,12,7,0,13,16,0,0,[1,4411,181],[[4412,2,17]]],[0,12,7,0,13,18,0,0,[1,4592,220],[[4593,2,19]]],[0,20,7,0,21,22,0,0,[1,4812,347],[[4813,2,23]]],[0,20,7,0,21,24,0,0,[1,5160,180],[[5161,2,25]]]]],[0,26,0,0,0,0,0,0,[1,5342,391],[[0,20,7,0,21,27,0,0,[1,5343,389],[[5344,2,28]]]]],[0,29,0,0,0,0,0,0,[1,5734,10109],[[0,30,7,0,31,32,0,0,[1,5736,104],[[5840,2,33]]],[0,34,35,0,36,37,0,0,[1,5841,10002],[[15843,2,38]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*c:\\Users\\brazil\\Desktop\\alura_robot\\robot\\primeiro_teste.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1k8qSqzKzNF3SS3OLskv0E/MKS1KjC/KT8ov0YeQBUWZuamZRfnxJanFJal6YEElO+qYY6OfaAcA/3Q5Bg==","*Abrir navegador e acessar o site do organo","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*url=http://localhost:3000/    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*Preencher campos do formulário, clicar no botão 'Criar Card' e validar se o card é criado","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:form-nome    Thales","*Typing text 'Thales' into text field 'id:form-nome'.","*id:form-cargo    QA Analist","*Typing text 'QA Analist' into text field 'id:form-cargo'.","*id:form-imagem    <a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>","*Typing text '<a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>' into text field 'id:form-imagem'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*class:lista-suspensa","*Clicking element 'class:lista-suspensa'.","*//option[contains(., 'Programação')]","*Clicking element '//option[contains(., 'Programação')]'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds.","*id:form-botao","*Clicking element 'id:form-botao'.","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*class:colaborador","*Element 'class:colaborador' is displayed."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*c:\\Users\\brazil\\Desktop\\alura_robot\\robot\\primeiro_teste.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1k8qSqzKzNF3SS3OLskv0E/MKS1KjC/KT8ov0YeQBUWZuamZRfnxJanFJal6YEElO+qYY6OfaAcA/3Q5Bg==","*Verificar preenchimento dos campos do formulário corretamente, inserção dos dados na lista e criação do card no time esperado.","*Dado que eu acesse a plataforma","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*E preencha os campos do formulário","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${CAMPO_NOME}    Thales","*Typing text 'Thales' into text field 'id:form-nome'.","*${CAMPO_CARGO}    QA Analist","*Typing text 'QA Analist' into text field 'id:form-cargo'.","*${CAMPO_IMAGEM}    <a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>","*Typing text '<a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>' into text field 'id:form-imagem'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${CAMPO_TIME}","*Clicking element 'class:lista-suspensa'.","*${OPCAO_PROGRAMACAO}","*Clicking element '//option[contains(.,'Programação')]'.","*E clique no botão Criar Card","*${BOTAO_CARD}","*Clicking element 'id:form-botao'.","*Então indentifica o card no time esperado","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*class:colaborador","*Element 'class:colaborador' is displayed.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*10","*Slept 10 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1736214387448;
+window.output["baseMillis"] = 1736297472610;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13507;
+window.output["generated"] = 15975;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
