--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13475],[],[[4,0,0,[],[1,416,2186],[]],[5,0,0,[],[1,2604,10869],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15850],[],[[4,0,0,[],[1,545,15300],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*c:\\Users\\brazil\\Desktop\\alura_robot\\robot\\primeiro_teste.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1k8qSqzKzNF3SS3OLskv0E/MKS1KjC/KT8ov0YeQBUWZuamZRfnxJanFJal6YEElO+qYY6OfaAcA/3Q5Bg==","*Abrir navegador e acessar o site do organo","*Preencher campos do formulário, clicar no botão 'Criar Card' e validar se o card é criado"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*c:\\Users\\brazil\\Desktop\\alura_robot\\robot\\primeiro_teste.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1k8qSqzKzNF3SS3OLskv0E/MKS1KjC/KT8ov0YeQBUWZuamZRfnxJanFJal6YEElO+qYY6OfaAcA/3Q5Bg==","*Verificar preenchimento dos campos do formulário corretamente, inserção dos dados na lista e criação do card no time esperado."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1736214387448;
+window.output["baseMillis"] = 1736297472610;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13507;
+window.output["generated"] = 15975;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
